--- a/W1.html
+++ b/W1.html
@@ -4,230 +4,75 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Les 1 | Lost in Trainslation - Schetsen</title>
-
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" />
-
-  <!-- CSS-bestanden -->
-  <link rel="stylesheet" href="assets/styles.css">
-  <link rel="stylesheet" href="assets/flexboxes.css">
-  <link rel="stylesheet" href="assets/nav.css">
-  <link rel="stylesheet" href="assets/typography.css">
-
-  <!-- Extra CSS voor donkerpaarse stijl -->
-  <style>
-    :root {
-      --primary:#2b2447;     /* Donkerpaars, zelfde als index */
-      --secondary: #f2efff;      /* Lichte lavendel achtergrond */
-      --text: #2b2447;
-      --white: #ffffff;
-      --radius: 14px;
-      --shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    }
-
-    body {
-      margin: 0;
-      font-family: "Roboto", sans-serif;
-      background: var(--secondary);
-      color: var(--text);
-      display: flex;
-      justify-content: center;
-      min-height: 100vh;
-      padding: 40px;
-    }
-
-    .container {
-      display: flex;
-      background: var(--white);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      overflow: hidden;
-      width: 95%;
-      max-width: 1100px;
-    }
-
-    /* Sidebar */
-    .title {
-      background: var(--primary);
-      color: var(--white);
-      font-family: "Poppins", sans-serif;
-      font-size: 1.8rem;
-      font-weight: 700;
-      text-align: center;
-      padding: 2rem 1rem;
-      width: 250px;
-    }
-
-    ul.vertical-buttons {
-      list-style: none;
-      margin: 0;
-      padding: 1.5rem;
-      background: #e7e1ff;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 12px;
-    }
-
-    ul.vertical-buttons li {
-      width: 100%;
-    }
-
-    ul.vertical-buttons a {
-      display: block;
-      text-align: center;
-      padding: 0.9rem 1rem;
-      border-radius: var(--radius);
-      text-decoration: none;
-      color: var(--primary);
-      font-weight: 500;
-      background: var(--white);
-      transition: all 0.25s ease;
-      box-shadow: 0 1px 5px rgba(0, 0, 0, 0.08);
-    }
-
-    ul.vertical-buttons a:hover,
-    ul.vertical-buttons a.active {
-      background: var(--primary);
-      color: var(--white);
-      transform: translateY(-2px);
-    }
-
-    /* Main content */
-    page {
-      flex: 1;
-      padding: 3rem;
-    }
-
-    h1 {
-      color: var(--primary);
-      font-family: "Poppins", sans-serif;
-      font-size: 2.2rem;
-      margin-bottom: 0.5rem;
-    }
-
-    h2 {
-      color:#2b2447;
-      font-weight: 500;
-      margin-bottom: 1.5rem;
-    }
-
-    p {
-      line-height: 1.8;
-      font-size: 1.05rem;
-      margin-bottom: 1.5rem;
-      color: #3b3362;
-    }
-
-    .two-columns {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2rem;
-      margin-top: 1.5rem;
-    }
-
-    .column {
-      flex: 1;
-      min-width: 320px;
-      background: #f6f4ff;
-      padding: 2rem;
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      transition: 0.3s ease;
-    }
-
-    .column:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-    }
-
-    h3 {
-      color: var(--primary);
-      font-family: "Poppins", sans-serif;
-      margin-bottom: 0.8rem;
-    }
-
-    @media (max-width: 900px) {
-      .container {
-        flex-direction: column;
-      }
-
-      .title {
-        width: 100%;
-      }
-
-      ul.vertical-buttons {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-
-      page {
-        padding: 2rem;
-      }
-    }
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+   <style>
+    body { font-family: 'Roboto', sans-serif; }
+    .title { font-family: 'Poppins', sans-serif; }
+    h1, h3 { font-family: 'Poppins', sans-serif; }
   </style>
 </head>
+<body class="bg-[#edeaf5] text-[#2d2242] min-h-screen flex justify-center p-10 font-['Roboto']">
 
-<body>
-  <div class="container">
+  <!-- Container -->
+  <div class="flex bg-white rounded-[14px] shadow-md overflow-hidden w-[95%] max-w-[1200px]">
+
     <!-- Sidebar -->
     <div>
-      <div class="title">Prototyping Tools</div>
-      <ul class="vertical-buttons">
-        <li><a href="index.html">Logboek</a></li>
-        <li><a href="W1.html" class="active">Les 1</a></li>
+      <div class="title bg-[#2d2242] text-white text-center text-2xl font-bold p-8 w-[260px] tracking-wide">
+        Prototyping Tools
+      </div>
+
+      <ul class="list-none m-0 p-6 bg-[#edeaf5] flex flex-col items-center gap-3 h-full">
+        <li class="w-full"><a class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition" href="index.html">Logboek</a></li>
+        <li class="w-full"><a class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition" href="W1.html">Les 1</a></li>
+        <li class="w-full"><a class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition" href="W2.html">Les 2</a></li>
+        <li class="w-full"><a class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition" href="W3.html">Les 3</a></li>
+        <li class="w-full"><a class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition" href="W4.html">Les 4</a></li>
+        <li class="w-full"><a class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition" href="W5.html">Les 5</a></li>
       </ul>
     </div>
 
     <!-- Main Page -->
-    <page>
-      <h1>Lost in Trainslation - Schetsen</h1>
-      <h2>Lana van Dessel</h2>
-      <p><strong>Datum:</strong> 18 september 2025</p>
+    <main class="flex-1 p-12">
+      <h1 class="text-4xl font-bold mb-2 text-[#2d2242]">Lost in Trainslation - Schetsen</h1>
+      <h2 class="text-[#2d2242] font-medium mb-6">Lana van Dessel</h2>
+      <p class="leading-7 text-[1rem] mb-6"><strong>Datum:</strong> 18 september 2025</p>
 
-      <p>
+      <p class="leading-7 text-[1.05rem] mb-6">
         In deze eerste les van Prototyping Tools leerden we wat een prototype precies is en waarom het belangrijk is.  
         We kregen de opdracht “Lost in Trainslation”, waarbij we moesten bedenken hoe we informatie op een treinscherm duidelijk konden weergeven.  
         Het doel was om een overzicht te maken dat voor reizigers makkelijk te begrijpen is.
       </p>
 
-      <div class="two-columns">
-        <div class="column">
-          <h3>Mijn eerste schetsen</h3>
-          <p>
+      <div class="flex flex-wrap gap-6 mt-6">
+        <!-- Column 1 -->
+        <div class="flex-1 min-w-[320px] bg-[#f8f6fc] p-6 rounded-[14px] shadow-md transition hover:-translate-y-1 hover:shadow-xl">
+          <h3 class="text-2xl font-bold mb-3 text-[#2d2242]">Mijn eerste schetsen</h3>
+          <p class="leading-7 mb-4">
             Ik begon met het maken van schetsen op papier. In het begin dacht ik dat ik alles zelf mocht verzinnen,  
             maar later bleek dat ik een bestaand ontwerp moest verbeteren. Daardoor moest ik even opnieuw beginnen.  
             Nadat ik de opdracht beter had gelezen en uitleg had gevraagd aan klasgenoten, snapte ik beter wat ik moest doen.  
             Toen kon ik gericht werken aan een duidelijker ontwerp.
           </p>
-          <p>
+          <p class="leading-7">
             Tijdens het tekenen merkte ik dat kleine dingen zoals tekstgrootte, kleuren en pictogrammen veel verschil maken.  
             Een goed ontwerp is niet alleen mooi, maar ook overzichtelijk. Dat vond ik een belangrijk inzicht.
           </p>
         </div>
 
-        <div class="column">
-          <h3>Wat ik heb geleerd</h3>
-          <p>
+        <!-- Column 2 -->
+        <div class="flex-1 min-w-[320px] bg-[#f8f6fc] p-6 rounded-[14px] shadow-md transition hover:-translate-y-1 hover:shadow-xl">
+          <h3 class="text-2xl font-bold mb-3 text-[#2d2242]">Wat ik heb geleerd</h3>
+          <p class="leading-7 mb-4">
             Deze les heeft me geleerd dat goed nadenken vóórdat je begint met tekenen veel tijd scheelt.  
             Ik weet nu dat het slim is om eerst te begrijpen wat het doel van de opdracht is,  
             voordat je start met het ontwerp zelf.
           </p>
-          <p>
+          <p class="leading-7 mb-4">
             Volgende keer wil ik beter letten op de informatie die ik gebruik en eerst een korte planning maken.  
             Ook wil ik oefenen met digitale tools zoals Figma, zodat ik mijn schetsen makkelijker kan uitwerken op de computer.
           </p>
-          <p>
+          <p class="leading-7">
             Aan het einde van de les had ik een duidelijke schets van mijn treinscherm.  
-            Het was nog niet perfect, maar ik begreep beter hoe ik een idee kan verbeteren en stap voor stap duidelijker kan maken.
-          </p>
-        </div>
-      </div>
-    </page>
-  </div>
-</body>
-</html>
-
-
+            Het was nog niet perfect, maar ik begreep beter hoe ik een idee kan verbeteren.
