--- a/W2.html
+++ b/W2.html
@@ -1,239 +1,95 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="nl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Les 2 | Lost in Trainslation - Figma</title>
-
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" />
-
-  <!-- CSS-bestanden -->
-  <link rel="stylesheet" href="assets/styles.css">
-  <link rel="stylesheet" href="assets/flexboxes.css">
-  <link rel="stylesheet" href="assets/nav.css">
-  <link rel="stylesheet" href="assets/typography.css">
-
-  <!-- Extra CSS voor donkerpaarse stijl -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
-    :root {
-      --primary:#2b2447;     
-      --secondary: #f2efff;      
-      --text: #2b2447;
-      --white: #ffffff;
-      --radius: 14px;
-      --shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    }
-
-    body {
-      margin: 0;
-      font-family: "Roboto", sans-serif;
-      background: var(--secondary);
-      color: var(--text);
-      display: flex;
-      justify-content: center;
-      min-height: 100vh;
-      padding: 40px;
-    }
-
-    .container {
-      display: flex;
-      background: var(--white);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      overflow: hidden;
-      width: 95%;
-      max-width: 1100px;
-    }
-
-    /* Sidebar */
-    .title {
-      background: var(--primary);
-      color: var(--white);
-      font-family: "Poppins", sans-serif;
-      font-size: 1.8rem;
-      font-weight: 700;
-      text-align: center;
-      padding: 2rem 1rem;
-      width: 250px;
-    }
-
-    ul.vertical-buttons {
-      list-style: none;
-      margin: 0;
-      padding: 1.5rem;
-      background: #e7e1ff;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 12px;
-    }
-
-    ul.vertical-buttons li {
-      width: 100%;
-    }
-
-    ul.vertical-buttons a {
-      display: block;
-      text-align: center;
-      padding: 0.9rem 1rem;
-      border-radius: var(--radius);
-      text-decoration: none;
-      color: var(--primary);
-      font-weight: 500;
-      background: var(--white);
-      transition: all 0.25s ease;
-      box-shadow: 0 1px 5px rgba(0, 0, 0, 0.08);
-    }
-
-    ul.vertical-buttons a:hover,
-    ul.vertical-buttons a.active {
-      background: var(--primary);
-      color: var(--white);
-      transform: translateY(-2px);
-    }
-
-    /* Main content */
-    page {
-      flex: 1;
-      padding: 3rem;
-    }
-
-    h1 {
-      color: var(--primary);
-      font-family: "Poppins", sans-serif;
-      font-size: 2.2rem;
-      margin-bottom: 0.5rem;
-    }
-
-    h2 {
-      color:#2b2447;
-      font-weight: 500;
-      margin-bottom: 1.5rem;
-    }
-
-    p {
-      line-height: 1.8;
-      font-size: 1.05rem;
-      margin-bottom: 1.5rem;
-      color: #3b3362;
-    }
-
-    .two-columns {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2rem;
-      margin-top: 1.5rem;
-    }
-
-    .column {
-      flex: 1;
-      min-width: 320px;
-      background: #f6f4ff;
-      padding: 2rem;
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      transition: 0.3s ease;
-    }
-
-    .column:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-    }
-
-    h3 {
-      color: var(--primary);
-      font-family: "Poppins", sans-serif;
-      margin-bottom: 0.8rem;
-    }
-
-    @media (max-width: 900px) {
-      .container {
-        flex-direction: column;
-      }
-
-      .title {
-        width: 100%;
-      }
-
-      ul.vertical-buttons {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-
-      page {
-        padding: 2rem;
-      }
-    }
+    body { font-family: 'Roboto', sans-serif; }
+    .title { font-family: 'Poppins', sans-serif; }
+    h1, h3 { font-family: 'Poppins', sans-serif; }
   </style>
 </head>
 
-<body>
-  <div class="container">
+<body class="bg-[#edeaf5] text-[#2d2242] min-h-screen flex justify-center p-10">
+
+  <!-- Container -->
+  <div class="flex bg-white rounded-[14px] shadow-md overflow-hidden w-[95%] max-w-[1200px]">
+
     <!-- Sidebar -->
     <div>
-      <div class="title">Prototyping Tools</div>
-      <ul class="vertical-buttons">
-        <li><a href="index.html">Logboek</a></li>
-        <li><a href="W1.html">Les 1</a></li>
-        <li><a href="W2.html" class="active">Les 2</a></li>
+      <div class="title bg-[#2d2242] text-white text-center text-2xl font-bold p-8 w-[260px] tracking-wide">
+        Prototyping Tools
+      </div>
+
+      <ul class="list-none m-0 p-6 bg-[#edeaf5] flex flex-col items-center gap-3 h-full">
+        <li class="w-full"><a href="index.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Logboek</a></li>
+        <li class="w-full"><a href="W1.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 1</a></li>
+        <li class="w-full"><a href="W2.html" class="block text-center p-4 rounded-xl bg-[#2d2242] text-white font-medium shadow transition">Les 2</a></li>
+        <li class="w-full"><a href="W3.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 3</a></li>
+        <li class="w-full"><a href="W4.html" class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition">Les 4</a></li>
+        <li class="w-full"><a class="block text-center p-4 rounded-xl bg-white text-[#2d2242] font-medium shadow hover:bg-[#2d2242] hover:text-white transition" href="W5.html">Les 5</a></li>
+        
       </ul>
     </div>
 
     <!-- Main Page -->
-    <page>
-      <h1>Lost in Trainslation - Figma</h1>
-      <h2>Lana van Dessel</h2>
-      <p><strong>Datum:</strong> 2 oktober 2025</p>
+    <main class="flex-1 p-12">
+      <h1 class="text-4xl font-bold mb-2 text-[#2d2242]">Lost in Trainslation - Figma</h1>
+      <h2 class="text-[#2d2242] font-medium mb-6">Lana van Dessel</h2>
+      <p class="leading-7 text-[1rem] mb-6"><strong>Datum:</strong> 2 oktober 2025</p>
 
-      <p>
+      <p class="leading-7 text-[1.05rem] mb-6">
         In deze tweede les van Prototyping Tools maakten we kennis met <strong>Figma</strong> — een digitaal ontwerpprogramma waarmee je snel en overzichtelijk prototypes kunt maken.  
         Waar we in de vorige les vooral op papier werkten, leerden we nu hoe we onze ideeën konden vertalen naar een digitale omgeving.  
         De opdracht was om ons treinscherm uit “Lost in Trainslation” verder te ontwikkelen in Figma, met aandacht voor leesbaarheid, indeling en consistentie.
       </p>
 
-      <div class="two-columns">
-        <div class="column">
-          <h3>Wat ik heb gedaan</h3>
-          <p>
+      <div class="flex flex-wrap gap-6 mt-6">
+        <!-- Column 1 -->
+        <div class="flex-1 min-w-[320px] bg-[#f8f6fc] p-6 rounded-[14px] shadow-md transition hover:-translate-y-1 hover:shadow-xl">
+          <h3 class="text-2xl font-bold mb-3 text-[#2d2242]">Wat ik heb gedaan</h3>
+          <p class="leading-7 mb-4">
             Ik begon de les met het openen van mijn schetsen van vorige week. Die gebruikte ik als basis om in Figma een digitaal ontwerp te maken.  
             Eerst leerde ik hoe je een frame aanmaakt, tekst toevoegt en objecten uitlijnt. Daarna begon ik met het opbouwen van mijn treinscherm:  
             een duidelijk overzicht met vertrek- en aankomsttijden, perroninformatie en pictogrammen voor vertragingen of spoorwijzigingen.  
             Ik probeerde vooral rust en duidelijkheid te creëren door voldoende witruimte en logische groepering van informatie.
           </p>
-          <p>
+          <p class="leading-7 mb-4">
             Tijdens het werken ontdekte ik hoe handig componenten zijn.  
             Door knoppen en iconen als component op te slaan, kon ik ze gemakkelijk aanpassen zonder alles opnieuw te maken.  
             Dat maakte het proces veel efficiënter. Ook experimenteerde ik met kleurpaletten om het scherm beter leesbaar te maken in zowel lichte als donkere modi.
           </p>
-          <p>
+          <p class="leading-7">
             Tot slot voegde ik enkele interactieve elementen toe, zoals een knop die naar een ander scherm linkt.  
             Zo kon ik laten zien hoe een reiziger bijvoorbeeld tussen informatiepagina’s zou kunnen wisselen.
           </p>
         </div>
 
-        <div class="column">
-          <h3>Reflectie</h3>
-          <p>
+        <!-- Column 2 -->
+        <div class="flex-1 min-w-[320px] bg-[#f8f6fc] p-6 rounded-[14px] shadow-md transition hover:-translate-y-1 hover:shadow-xl">
+          <h3 class="text-2xl font-bold mb-3 text-[#2d2242]">Reflectie</h3>
+          <p class="leading-7 mb-4">
             Deze les heeft me echt laten inzien hoe belangrijk digitale tools zijn binnen het ontwerpproces.  
             Waar ik op papier nog wat beperkt was, gaf Figma me de mogelijkheid om precies te zien hoe mijn ontwerp er in de praktijk uit zou zien.  
             Ik vond het prettig dat ik direct feedback kon verwerken en aanpassingen kon testen zonder alles opnieuw te moeten tekenen.
           </p>
-          <p>
+          <p class="leading-7 mb-4">
             Wat ik nog moeilijk vond, was het gebruik van marges en uitlijning.  
             Soms zag mijn ontwerp er op het eerste gezicht goed uit, maar bleek bij inzoomen dat sommige elementen net niet op één lijn stonden.  
             Volgende keer wil ik hier meer op letten door gebruik te maken van de Figma-rasterfunctie en automatische afstandsinstellingen.
           </p>
-          <p>
+          <p class="leading-7">
             Al met al vond ik het een leerzame les.  
             Ik merk dat mijn ontwerpvaardigheden stap voor stap groeien — van idee, naar schets, naar een functioneel digitaal prototype.  
             Volgende keer wil ik mijn ontwerp verder verbeteren met animaties of een interactieve demo, zodat ik echt kan laten zien hoe de gebruiker met het scherm zou omgaan.
           </p>
         </div>
       </div>
-    </page>
+    </main>
+
   </div>
 </body>
 </html>
